# AI-Workstation

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml  docker-verify.yml
compose/: .env.example  mlflow.yml  pytorch.yml  tensorflow.yml
configs/mlflow/: mlflow.db
docker/00-base/: README.md
docker/01-python/: README.md
docker/02-science/: Dockerfile  README.md  verify.sh
docker/03-pytorch/: Dockerfile  README.md  verify.sh
docker/03-tensorflow/: Dockerfile  README.md  verify.sh
docker/04-jupyter/: Dockerfile  README.md  verify.sh
docker/05-mlflow/: Dockerfile  README.md  verify.sh
docs/: architecture.md
projects/titanic_survival/: Makefile  README.md  pyproject.toml
projects/titanic_survival/notebooks/: 01_data_understanding.ipynb  02_feature_engineering.ipynb  03_transformation_design.ipynb
projects/titanic_survival/src/titanic_survival/: config.py
scripts/ci/: build-images.sh  publish-images.sh  verify-images.sh
scripts/project/: cli.py  exceptions.py  generator.py  placeholders.py
scripts/project/tests/: test_generator.py  test_placeholders.py  test_validator.py
src/ai_workstation/project/: constants.py  validator.py
src/ml_studio/project/: cli.py  constants.py  generator.py  logger.py
templates/ml-template/: .gitignore  Makefile  README.md  pyproject.toml
templates/ml-template/scripts/: evaluate.py  predict.py  train.py
tests/: test_file_utils.py  test_generator.py  test_placeholders.py  test_validator.py
