[project]
name = "titanic_survival"
version = "0.1.0"
description = "Titanic Survival Prediction"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "Alok Senapati" }
]

dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "scikit-learn>=1.6",
    "pydantic-settings>=2.10",
    "matplotlib>=3.11.0",
    "jupyter>=1.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "ruff>=0.12",
    "mypy>=1.17",
    "pre-commit>=4.2"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
